// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should react on meta.plaintext correctly 1`] = `
<DocumentFragment>
  <form
    class=" plaintext"
  >
    <div
      class="row form-group"
    >
      <label
        class="text-right col-sm-3 col-form-label"
        for="mock"
      >
        mock
      </label>
      <div
        class="col-sm-9"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control-plaintext"
            id="mock"
            name="mock"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<Input /> should react on meta.valid correctly 1`] = `
<DocumentFragment>
  <form
    class=" plaintext"
  >
    <div
      class="is-invalid is-touched row form-group"
    >
      <label
        class="text-right col-sm-3 col-form-label"
        for="mock"
      >
        <svg
          aria-labelledby="svg-inline--fa-title-c27hJTbvDXLz"
          class="svg-inline--fa fa-exclamation-circle fa-w-16 ico-invalid mr-2"
          data-icon="exclamation-circle"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="svg-inline--fa-title-c27hJTbvDXLz"
          >
            ojs_field_invalid
          </title>
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
          />
        </svg>
        mock
      </label>
      <div
        class="col-sm-9"
      >
        <div
          class="input-group"
        >
          <input
            class="is-invalid form-control-plaintext"
            id="mock"
            name="mock"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            This field is mandatory.
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<Input /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="row form-group"
    >
      <label
        class="text-right col-sm-3 col-form-label"
        for="mock"
      >
        mock
      </label>
      <div
        class="col-sm-9"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="mock"
            name="mock"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
